# pseudo

./: .gitignore  Cargo.toml
src/: :w  ast.rs  environment.rs  interpreter.rs  io_provider.rs  lexer.rs  lib.rs  main.glade  main.rs  parser.rs  utils.rs
src/ast/: callable.rs  expression.rs  literal.rs  location.rs  mod.rs  operator.rs  statement.rs  token.rs  types.rs
src/error/: lex.rs  mod.rs  parser.rs  runtime.rs  types.rs
src/gui/: io_provider.rs  mod.rs
src/internal/: environment.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs
src/internal/ast/: callable.rs  expression.rs  literal.rs  location.rs  mod.rs  operator.rs  statement.rs  token.rs  types.rs
src/internal/error/: io.rs  lex.rs  mod.rs  parser.rs  runtime.rs  types.rs
src/tests/: operations.rs
src/tests/common/: mod.rs
tests/: arithmetic_operations.rs  arrays.rs  boolean_operations.rs  condition_controlled_iteration.rs  count_controlled_iteration.rs  io.rs  operations.rs  relational_operations.rs  rng.rs  selection.rs  string_operations.rs  subroutines.rs  type_casting.rs  variables_and_constants.rs
tests/common/: mod.rs
