[package]
name = "pseudocode"
version = "0.2.0"
authors = ["aleph"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peeking_take_while = "^0.1.2"
rand = "^0.7.2"
glib = ""
sourceview = "0.8.0"
gio = ""

[dependencies.gtk]
version = ""
features = ["v3_20"]

